# journal-web-ui

./: .gitlab-ci.yml  Cargo.toml  README.md  publiccode.yml
deployment/: journal-web-interface.service  journal-web-ui.service  postinst
src/: main.rs
