[package]
name = "journal-web-ui"
description = "Provides a web UI for the systemd journal"
version = "0.1.0"
authors = ["AG umwelt.info <umwelt.info@uba.de>"]
license = "GPL-3.0"
repository = "https://gitlab.opencode.de/umwelt-info/journal-web-ui"
edition = "2021"

[dependencies]
form_urlencoded = "1.1"
hyper = { version = "0.14", features = ["http1", "server", "tcp", "stream"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "hostname", "builder"] }
regex = "1.7"
tokio = { version = "1.0", features = ["macros", "rt", "process", "io-util"] }
tokio-stream = { version = "0.1", features = ["io-util"] }

[profile.release]
lto = "thin"
strip = "debuginfo"

[package.metadata.deb]
maintainer-scripts = "deployment"
assets = [
    ["target/release/journal-web-ui", "usr/bin/", "755"],
    ["deployment/journal-web-ui.service", "etc/systemd/system/", "644"],
]
